--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
             margin: 20px 0;
             font-style: italic;
             color: #004D4D;
-            text-align: left; /* Söz olduğu için sola dayalı daha şık durabilir veya center */
             text-align: center;
             border-radius: 0 8px 8px 0;
             font-weight: 500;
@@ -103,9 +102,10 @@
             margin-top: 10px;
         }
 
-        /* WhatsApp Butonu */
-        .btn-whatsapp {
-            background-color: #25D366;
+        /* Instagram Butonu (Güncellendi) */
+        .btn-instagram {
+            /* Instagram Gradient Rengi */
+            background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
             color: white;
             padding: 16px;
             border-radius: 24px;
@@ -136,7 +136,7 @@
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
         }
         
-        .btn-enter:active, .btn-whatsapp:active { transform: scale(0.98); }
+        .btn-enter:active, .btn-instagram:active { transform: scale(0.98); }
 
 
         /* --- NORMAL ARAYÜZ --- */
@@ -229,9 +229,10 @@
             </div>
 
             <div class="button-group">
-                <a href="https://wa.me/905518912600" target="_blank" class="btn-whatsapp">
-                    <span class="material-symbols-outlined">chat</span>
-                    Soru Sor (WhatsApp)
+                <!-- INSTAGRAM BUTONU -->
+                <a href="https://www.instagram.com/tevafuk.tr" target="_blank" class="btn-instagram">
+                    <span class="material-symbols-outlined">send</span> <!-- İkonu mesaj gönderme simgesi yaptım -->
+                    Instagram'dan Mesaj At
                 </a>
                 
                 <button class="btn-enter" onclick="popupKapat()">
@@ -316,4 +317,4 @@
         });
     </script>
 </body>
-  </html>
+</html>
